# rondb-rest-api-server-old

./: Makefile  README.md  go.mod  main.go
app/: app.go
cmd/server/: main.go
data-access-rondb/: .ccls  .clang-format  CMakeLists.txt  enable-core-dump  ndb_api_wrapper.cpp  ndb_api_wrapper.h
data-access-rondb/src/: decimal_utils.hpp  error-strs.h  logger.h  logger.hpp  ndb_object_pool.cpp  ndb_object_pool.hpp  pk-read.cpp  pk-read.hpp  rdrs-const.h  rdrs-dal.cpp  rdrs-dal.h  rdrslib.cpp  rdrslib.h  status.hpp
data-access-rondb/src/base64/: measure-time.cpp  test.cpp
data-access-rondb/src/common/: rdrs_date.hpp  rdrs_string.hpp
data-access-rondb/src/db-operations/pk/: common.cpp  common.hpp  pkr-operation.cpp  pkr-operation.hpp  pkr-request.cpp  pkr-response.cpp  pkr-response.hpp
data-access-rondb/src/pk-read/: pkr-operation.cpp  pkr-operation.hpp  pkr-request.cpp  pkr-request.hpp  pkr-response.cpp  pkr-response.hpp
data-access-rondb/src/rondb-lib/: rdrs_date.hpp
internal/router/ginrouter/: .router.go.swo  router.go
internal/router/handler/batchops/: batch_op_handler.go  batch_op_handler_test.go
internal/router/handler/pkread/: pk_op_handler.go  pk_op_handler_test.go  primary-key-handler.go  primary-key-handler_test.go
internal/router/handler/stat/: stat_test.go
openapi/: api.yml
pkg/server/router/: ginrouter.go  router.go
rest-api-server/: Makefile  README.md  config_template.json  go.mod  go.sum
rest-api-server/cmd/server/: main.go
rest-api-server/internal/common/: cerrors.go  encoding-helper.go  response.go  schemata.go
rest-api-server/internal/config/: config.go  config_template.json
rest-api-server/internal/dal/: dal.go  heap.go  heap_test.go  rdrs-dal.go
rest-api-server/internal/datastructs/: batch-data-structs.go  common.go  pk-data-structs.go  stat-data-structs.go
rest-api-server/internal/log/: log.go  logc.go
rest-api-server/internal/native/: heap.go  memcpy.go  native.go
rest-api-server/internal/router/handler/batchops/: batch_op_handler.go  batch_op_handler_test.go
rest-api-server/internal/router/handler/pkread/: encoding-scheme.ods  encoding.go  native.go  pk_op_handler.go  (+4 more)
rest-api-server/pkg/server/router/: ginrouter.go  router.go
rest-api-server/version/: version.go
(+3 files in other folders)
